# All-Ten-nutrition-api

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  app-minimal.py  app-railway.py  app-render.py  app-simple.py  app.py  build.sh  deploy.sh  google-credentials.json  pyproject.toml  railway.json  render.yaml  requirements-minimal.txt  requirements.txt  start-railway.sh
