[tool.poetry]
name = "all-ten-nutrition-api"
version = "0.1.0"
description = "All Ten Nutrition API with Google Cloud Vision integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.11.7"
google-cloud-vision = "^3.4.4"
Flask = "^3.0.0"
Flask-CORS = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 